fix(client): better resizing & alignment

--- a/client/components/game_board/game_list.css
+++ b/client/components/game_board/game_list.css
@@ -12,6 +12,8 @@
 #gameList h2 {
   border: thin green solid;
   color: indigo;
+  background: white;
+  z-index: 2;
 }
 
 #gameList ul {
@@ -94,10 +96,10 @@
 }
 
 #gameList .score {
-  width: 21px;
+  width: 26px;
   height: 20px;
   margin: 0;
-  padding: 0px 4px 0px 0px;
+  padding: 0px;
   border-top: 2px #959595 solid;
   border-left: 2px #959595 solid;
   border-bottom: 2px #e0e0e0 solid;
@@ -107,14 +109,16 @@
 }
 
 #gameList span input {
-  width: 40px;
+  width: 26px;
   border: none;
   font-size: 18px;
   color: red;
   font-family: 'cursedTimer';
   vertical-align: super;
+  text-align: right;
   position: absolute;
-  left: 1px;
+  padding-right: 0px;
+  left: -8px;
   top:  -1px;
   background: none;
   outline: none;
