--- a/client/components/game_board/new_game.css
+++ b/client/components/game_board/new_game.css
@@ -18,10 +18,10 @@
   width: 130px;
   padding: 4px 0px;
   position: relative;
+  font-size: 16px;
   top: -1px;
   border-radius: 3px;
   background: rgb(224, 216, 231);
-  outline: none;
 }
 
 #newGame span {
