--- a/client/index.css
+++ b/client/index.css
@@ -1,17 +1,22 @@
-
-
 @font-face {
   font-family: 'cursedTimer';
   src: url('assets/CursedTimerUlil-Aznm.ttf')  format('truetype')
 }
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0px 30px 30px;
   font-family: sans-serif;
+  display: flex;
+  flex-flow: column;
+  height: 100%;
 }
 
 h1 {
-  font-family: "courier";
+  font-family: "Courier New";
   letter-spacing: 0.5px;
   background-image: linear-gradient(to right, indigo, blue, green, indigo, blue, green);
   background-clip: text;
@@ -58,7 +63,9 @@ textarea {
 
 #flexContainer {
   display: flex;
-  height: 600px;
+  height: 100%;
+  max-height: 600px;
+  margin-bottom: 10px;
 }
 
 #gameBoard {
